# hookshot

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  install.sh  opencode.json  package-lock.json
.cargo/: audit.toml
.claude/: UI_IMPROVEMENTS_SUMMARY.md  ui-improvements.md
.claude/commands/pm/: epic-list.md  epic-sync.md  issue-sync.md
.claude/epics/custom-ui-redesign/: 001.md  002.md  003.md  004.md  005.md  (+6 more)
.claude/prds/: custom-ui-redesign.md  hookshot-mvp.md  hookshot-ui-implementation.md
.claude/rules/: github-operations.md
.github/: RELEASE_GUIDE.md  release-changelog-config.json
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json  settings.local.json
.opencode/agents/: code-analyzer.md  file-analyzer.md  parallel-worker.md  test-runner.md
.opencode/commands/: code-rabbit.md  prompt.md  re-init.md
.opencode/hooks/: README.md
.opencode/prds/: hookshot-mvp.md
.opencode/rules/: path-standards.md  standard-patterns.md  test-execution.md
.opencode/scripts/: check-path-standards.sh  fix-path-standards.sh  path-tools-README.md
docs/: ARCHITECTURE.md
frontend/: .env.development  .env.example  .env.preview  .env.production  .gitignore  README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: 20240129_initial_schema.sql
src/: lib.rs  main.rs  static_files.rs
src/db/: mod.rs
src/handlers/: api.rs  endpoint.rs  mod.rs  webhook.rs  websocket.rs
src/models/: mod.rs
src/services/: endpoint.rs  mod.rs  request.rs
src/websocket/: manager.rs  mod.rs
tests/: api_integration_test.rs  api_test.rs  webhook_capture_test.rs  websocket_test.rs
(+182 files in other folders)
