[package]
name = "hookshot"
version = "0.1.0"
edition = "2021"

[lib]
name = "hookshot"
path = "src/lib.rs"

[[bin]]
name = "hookshot"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 encoding for binary request bodies
base64 = "0.21"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Static file embedding
include_dir = "0.7"
mime_guess = "2.0"

[build-dependencies]
# For running frontend build
walkdir = "2"
